just before home module refactor

--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -12,6 +12,7 @@
         </span>
     </div>
     <span class="spacer"></span>
+    <button mat-button (click)="logIn()">Log In</button>
     <mat-icon class="icon">favorite</mat-icon>
 </mat-toolbar>
 
