--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -13,7 +13,7 @@
     </div>
     <span class="spacer"></span>
     <button mat-button (click)="logIn()">Log In</button>
-    <mat-icon class="icon">favorite</mat-icon>
+    <!-- <mat-icon class="icon">favorite</mat-icon> -->
 </mat-toolbar>
 
 
