--- a/src/app/modules/tournament/tournament-card/tournament-card.component.html
+++ b/src/app/modules/tournament/tournament-card/tournament-card.component.html
@@ -3,7 +3,7 @@
     <mat-card-subtitle>subtitle</mat-card-subtitle>
     <mat-card-content>This is where most of the content will gom</mat-card-content>
     <mat-card-actions>
-        <button mat-button>View</button> <button *ngIf="enableEditing" mat-button>Edit</button> <button  *ngIf="enableEditing"  mat-button>Delete</button>
+        <button mat-button>View</button> <button *ngIf="enableEditing" [attr.data-tournamentId]="tournament.tournamentID" [attr.data-tournamentName]="tournament.tournamentName" mat-button (click)="edit($event)">Edit</button> <button  *ngIf="enableEditing"  mat-button>Delete</button>
     </mat-card-actions>
     <mat-card-footer>footer... so long friend....</mat-card-footer><!-- -->
 </mat-card>
