--- a/src/app/modules/tournament/tournament-tool-bar/tournament-tool-bar.component.html
+++ b/src/app/modules/tournament/tournament-tool-bar/tournament-tool-bar.component.html
@@ -2,20 +2,20 @@
     <mat-checkbox (change)="onEnableEditingChanged($event.checked)"></mat-checkbox>
     <span class="margin_x_5">Enabler Editing</span>
     <div class="toolBarButtons margin_x_5" *ngIf="enableEditing">
-        <mat-button-toggle-group [(ngModel)]="activeToolBarButton">
+        <mat-button-toggle-group (change)="activeToolBarButtonChange($event)">
             <mat-button-toggle value="Add">Add</mat-button-toggle>
-            <mat-button-toggle value="Edit">Edit</mat-button-toggle>
+            <mat-button-toggle disabled value="Edit">Edit</mat-button-toggle>
             <mat-button-toggle value="Delete">Delete</mat-button-toggle>
           </mat-button-toggle-group>
     </div>
-     <div class="example-container" *ngIf="enableEditing && (activeToolBarButton == 'Add')">
+     <div class="example-container" *ngIf="enableEditing && (activeToolBarButton != 'Delete')">
         <mat-form-field appearance="fill">
             <mat-label>Tournament Name</mat-label>
-            <input matInput placeholder="Durban July" [formControl]="email" required>
-            <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+            <input matInput placeholder="Durban July" [formControl]="tournament" required>
+            <mat-error *ngIf="tournament.invalid">{{getErrorMessage()}}</mat-error>
         </mat-form-field>
-        <button mat-button [disabled]="email.invalid" (click)="addTournament()">Add Tournament</button>
+        <button mat-button [disabled]="tournament.invalid" (click)="RunUpdate()">{{selectedBUttonText}}</button>
      </div>
-        {{activeToolBarButton}}
+        
 </div>
 
