--- a/src/app/shell/home/home.component.html
+++ b/src/app/shell/home/home.component.html
@@ -4,9 +4,11 @@
         <app-header></app-header>
     </div>
    <div class="body">
-       <router-outlet></router-outlet>
+    <!-- <mat-spinner></mat-spinner> -->
+    <router-outlet></router-outlet>
     </div>
     <div class="footer">
         <app-footer></app-footer>
     </div>
  </div>
+ <ngx-spinner type="ball-atom"></ngx-spinner>  
