--- a/src/app/modules/tournament/tournament-list/tournament-list.component.css
+++ b/src/app/modules/tournament/tournament-list/tournament-list.component.css
@@ -10,9 +10,33 @@
 .tournamentsContainer, .chips{
     display: flex;
     flex-flow: wrap;
+    padding-top: 25px;
+}
+
+.container{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
 }
 
 
 app-tournament-card{
     margin:5px;
+}
+
+app-tournament-tool-bar{
+    margin-top: 20px;
+    margin-bottom: 30px;
+    background-color: red;
+}
+
+.noContentToSee{
+    height:400px;
+    width: 50%;
+    background-image:url("../../../../assets/images/204.jpg");
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    opacity: 0.85;
 }
