--- a/src/app/shell/home/home.component.css
+++ b/src/app/shell/home/home.component.css
@@ -10,5 +10,13 @@
     padding: 10px;
 }
 
+.body {
+    
+   /* background-image: url("../../../assets/images/bg2.jpg");
+    color: whitesmoke;
+     
+    background-size:100% 100%; */
+}
+
 
 
