--- a/src/app/shell/header/header.component.html
+++ b/src/app/shell/header/header.component.html
@@ -10,6 +10,9 @@
         <span class="marginLeft-10">
             <a mat-button routerLink="/events">Events</a>
         </span>
+        <span class="marginLeft-10">
+            <a mat-button routerLink="/horses">Horses</a>
+        </span>
     </div>
     <span class="spacer"></span>
     <div class="userName" *ngIf="isAuthenticated else notAuthenticated">
