--- a/src/app/modules/event/event-tool-bar/event-tool-bar.component.html
+++ b/src/app/modules/event/event-tool-bar/event-tool-bar.component.html
@@ -9,13 +9,57 @@
             <mat-button-toggle value="Delete">Delete</mat-button-toggle>
           </mat-button-toggle-group>
     </div>
-     <div class="example-container" *ngIf="enableEditing && (activeToolBarButton != 'Delete')">
+     <div *ngIf="enableEditing && (activeToolBarButton != 'Delete')">
         <mat-form-field appearance="fill">
             <mat-label>Event Name</mat-label>
-            <input matInput placeholder="Durban July" [formControl]="event" required>
-            <mat-error *ngIf="event.invalid">{{getErrorMessage()}}</mat-error>
+            <input matInput placeholder="Durban July" [formControl]="eventName" required>
+            <mat-error *ngIf="eventName.invalid">{{getEventNameValidationMessage}}</mat-error>
         </mat-form-field>
-        <button mat-button [disabled]="event.invalid" (click)="RunUpdate()">{{selectedBUttonText}}</button>
+
+        <mat-form-field appearance="fill" *ngIf="eventName.valid">
+          <mat-label>Event Number</mat-label>
+          <input type="number" matInput placeholder="555" [formControl]="eventNumber" required>
+          <mat-error *ngIf="eventNumber.invalid">{{getEventNumberValidationMessage}}</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill" *ngIf="eventNumber.valid">
+          <mat-label>Choose an event start date</mat-label>
+          <input matInput [matDatepicker]="picker" [formControl]="eventDate">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill" *ngIf="eventDate.valid">
+          <mat-label>When does the event end?</mat-label>
+          <input matInput [matDatepicker]="picker" [formControl]="eventEndDate">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill"  *ngIf="eventEndDate.valid">
+          <mat-label>Tournament to join event under</mat-label>
+          <mat-select [formControl]="tournament" required>
+            <mat-option>--</mat-option>
+            <mat-option *ngFor="let t of currentTournamentList" [value]="t.tournamentID">
+              {{t.tournamentName}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="tournament.hasError('required')">Please choose a tournament</mat-error>
+          <!-- <mat-hint>{{tournament.value?.sound}}</mat-hint> -->
+        </mat-form-field>
+
+        <mat-slide-toggle
+        *ngIf="tournament.valid"
+        [formControl]="autoClose">
+          Auto CLose
+        </mat-slide-toggle>
+        <!-- <mat-form-field appearance="fill" *ngIf="eventNumber.valid">
+          <mat-label>Event Start Date</mat-label>
+          <input  matInput placeholder="555" [formControl]="eventNumber" required>
+          <mat-error *ngIf="eventNumber.invalid">{{getEventNumberValidationMessage}}</mat-error>
+        </mat-form-field> -->
+
+        <button mat-button [disabled]="!areAllInputsValid" (click)="RunUpdate()">{{selectedBUttonText}}</button>
      </div>
 
      <div class="chips" *ngIf="enableEditing && (activeToolBarButton == 'Delete')">
